# SOIS

./: .editorconfig  .gitmodules  CMakeLists.txt  README.md
Dependencies/: CMakeLists.txt
Dependencies/imgui/: CMakeLists.txt  imgui_draw.cpp  imgui_freetype.cpp  imgui_impl_dx11.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_internal.h  imgui_widgets.cpp
Dependencies/imgui_node_editor/: CMakeLists.txt
Dependencies/nativefiledialog/: CMakeLists.txt
Source/: ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  DX11Renderer.cpp  DX11Renderer.hpp  OpenGL3Renderer.cpp  OpenGL3Renderer.hpp  Renderer.hpp
Source/SOIS/: ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  DX11Creator.cpp  DX11Renderer.cpp  DX11Renderer.hpp  DX12Creator.cpp  DX12Renderer.cpp  DX12Renderer.hpp  ImGuiSample.hpp  Meta.hpp  OpenGL3Creator.cpp  OpenGL3Renderer.cpp  OpenGL3Renderer.hpp  Pipeline.hpp  PrivateImplementation.hpp  Renderer.cpp  Renderer.hpp  TypeTraits.hpp  Types.hpp  VulkanCreator.cpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Source/SOIS/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
Source/SOIS/Renderer/DirectX12/: DX12Renderer.cpp  DX12Renderer.hpp
Source/SOIS/Renderer/GPU/: Framebuffer.h  Queue.h
